# fulltext

./: .gitignore  Cargo.toml  README.md  R_Build.bat  R_Test.bat  RunExe.bat
src/: main.rs
