[package]
name = "fulltext"
version = "1.1.1"
edition = "2024"

[dependencies]
arboard = { version = "3.5", features = ["wayland-data-control"], optional = true }

[target.'cfg(windows)'.dependencies]
clipboard-win = "5.4"

[target.'cfg(not(windows))'.dependencies]
arboard = { version = "3.5", features = ["wayland-data-control"] }
